# music-player

./: .gitignore  CREDITS  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: main.yml
menus/: add_music.py  downloader.py  ffmpeg_missing.py  file_manager.py  fpcalc_missing.py  global_search.py  main.py  metadata_viewer.py  new_tab.py  settings.py
utils/: acoustid_metadata.py  constants.py  cover_art.py  file_watching.py  lyrics_metadata.py  music_handling.py  musicbrainz_metadata.py  online_metadata.py  preload.py  utils.py
