[project]
name = "MusicPlayer"
version = "0.1.0"
description = "A Music Player in Python, made with arcade and pyglet"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arcade==3.2.0",
    "iso3166>=2.1.1",
    "musicbrainzngs>=0.7.1",
    "mutagen>=1.47.0",
    "pydub>=0.25.1",
    "pypresence>=4.3.0",
    "thefuzz>=0.22.1",
    "watchdog>=6.0.0",
]
